add cpp subfolder for testing